--- a/ProyectoPooDist/src/ControlCliente/FrameClientes.form
+++ b/ProyectoPooDist/src/ControlCliente/FrameClientes.form
@@ -641,7 +641,7 @@
                               <Group type="102" attributes="0">
                                   <Component id="scrolgenerico" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="jPanel19" pref="0" max="32767" attributes="0"/>
+                                  <Component id="jPanel19" pref="251" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
@@ -791,7 +791,7 @@
                 <Container class="javax.swing.JPanel" name="jPanel19">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="ff" green="ff" red="ff" type="rgb"/>
+                      <Color blue="ff" green="99" red="66" type="rgb"/>
                     </Property>
                   </Properties>
                   <Events>
@@ -823,6 +823,9 @@
                       <Properties>
                         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                           <Font name="Nirmala UI" size="12" style="1"/>
+                        </Property>
+                        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                          <Color blue="ff" green="ff" red="ff" type="rgb"/>
                         </Property>
                         <Property name="text" type="java.lang.String" value="MODIFICAR INFORMACION DEL CLIENTE"/>
                       </Properties>
