--- a/ProyectoPooDist/src/ControlVentas/FrameVentaDiaria.form
+++ b/ProyectoPooDist/src/ControlVentas/FrameVentaDiaria.form
@@ -487,6 +487,9 @@
                   <Font name="Nirmala UI" size="12" style="0"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtPrecioAgregarActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="labelpreciocosto">
               <Properties>
